--- a/Italian/main/DownloadProviderUi.apk/res/values-it/strings.xml
+++ b/Italian/main/DownloadProviderUi.apk/res/values-it/strings.xml
@@ -108,6 +108,10 @@
     <string name="download_list_intoAuthAlert">Attendere</string>
     <string name="unbind_xunlei_success">Scollegamento account Xunlei completato</string>
     <string name="unbind_xunlei_2_success">Modifica account Xunlei completato</string>
+    <string name="privacy_tip_title">Utilizzare Xunlei Accelerator?</string>
+    <string name="privacy_tip_content">"Utilizzare Xunlei Accelerator per velocizzare i download? L'URL del download verrà caricato sui server Xunlei. Anche i dettagli del tuo Mi Account verranno caricati per verificare se hai qualche iscrizione attiva per questo servizio."</string>
+    <string name="privacy_tip_cancel">Annulla</string>
+    <string name="privacy_tip_ok">OK</string>
     <string name="app_label">Download</string>
     <string name="download_title">Download</string>
     <string name="download_title_sorted_by_date">Download - Ordinati per data</string>
