--- a/Italian/main/DownloadProvider.apk/res/values-it/strings.xml
+++ b/Italian/main/DownloadProvider.apk/res/values-it/strings.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="dialog_insufficient_space_on_external">Spazio insufficiente sulla memoria esterna</string>
+    <string name="dialog_insufficient_space_on_cache">Spazio insufficiente sulla memoria interna</string>
+    <string name="auto_restart_under_wifi">Questo file verrà scaricato automaticamente sotto copertura Wi-Fi</string>
+    <string name="task_already_exist">Processo già esistente</string>
+    <string name="privacy_tip_title">Utilizzare Xunlei Accelerator?</string>
+    <string name="privacy_tip_content">"Utilizzare Xunlei Accelerator per velocizzare i download? L'URL del download verrà caricato sui server Xunlei. Anche i dettagli del tuo Mi Account verranno caricati per verificare se hai qualche iscrizione attiva per questo servizio."</string>
+    <string name="privacy_tip_cancel">Annulla</string>
+    <string name="privacy_tip_ok">OK</string>
+    <string name="privacy_notif_title">Xunlei Download Accelerator attivato</string>
+    <string name="privacy_notif_content">Tocc aper vedere i dettagli.</string>
     <string name="app_label">Gestione download</string>
     <string name="permlab_downloadManager">Accesso alla gestione dei download.</string>
     <string name="permdesc_downloadManager">"Consente all'applicazione di accedere a gestione dei download e di utilizzarla per scaricare file. Le applicazioni dannose possono farne uso per disturbare i download e accedere a informazioni private."</string>
@@ -13,7 +23,7 @@
     <string name="permdesc_downloadCacheNonPurgeable">"Consente all'applicazione di scaricare nella cache i file che non possono essere eliminati automaticamente quando a gestione dei download serve più spazio."</string>
     <string name="permlab_downloadWithoutNotification">download file senza notifica</string>
     <string name="permdesc_downloadWithoutNotification">"Consente all'applicazione di scaricare i file tramite gestione dei download senza mostrare alcuna notifica all'utente."</string>
-    <string name="permlab_accessAllDownloads">Accesso a tutti i dowload di sistema</string>
+    <string name="permlab_accessAllDownloads">Accesso a tutti i download di sistema</string>
     <string name="permdesc_accessAllDownloads">"Consente all'applicazione di visualizzare e modificare tutti i download avviati da qualsiasi applicazione sul sistema."</string>
     <string name="download_unknown_title">&lt;Senza nome></string>
     <string name="notification_download_complete">Download completato.</string>
@@ -39,7 +49,4 @@ Tocca %s per avviare il download la prossima volta che sei connesso a una rete W
     <string name="download_running">In corso</string>
     <string name="download_error">Operazione non riuscita</string>
     <string name="download_running_percent">In corso, %d%%</string>
-    <string name="dialog_insufficient_space_on_external">Spazio insufficiente sulla memoria esterna</string>
-    <string name="dialog_insufficient_space_on_cache">Spazio insufficiente sulla memoria interna</string>
-    <string name="auto_restart_under_wifi">Questo file verrà scaricato automaticamente sotto copertura Wi-Fi</string>
 </resources>
