--- a/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
+++ b/Italian/main/SecurityCenter.apk/res/values-it/strings.xml
@@ -8,13 +8,17 @@
     <string name="cta_settings">"Consenti l'utilizzo della rete dati"</string>
     <string name="title_optimizer">Pulizia</string>
     <string name="header_optimizer">Utilizzando questa funzione accetti i <a href="http://www.cmcm.com/about/privacy_zh.html?p=cm">Termini del Servizio</a> di Clean Master.</string>
+    <string name="name_optimizer">"Informativa Privacy di Cheetah Mobile"</string>
     <string name="text_optimizer">Utilizza il motore di Pulizia online</string>
     <string name="summary_optimizer">Carica e confronta i nomi delle cartelle sconosciute con il database online</string>
     <string name="button_optimizer">OK</string>
     <string name="title_antivirus">Scansione Virus</string>
     <string name="header_antivirus">Utilizzando questa funzione accetti i "<a href="http://misc.3g.qq.com/g/agreement/index.jsp?id=7">Termini del Servizio</a> di Tencent.</string>
+    <string name="name_antivirus">"Leggi l'Informativa sulla Privacy"</string>
     <string name="text_antivirus">Utilizza database virus online</string>
+    <string name="text_antivirus_oversea">Aggiorna database virus</string>
     <string name="summary_antivirus">Carica e controlla nome e dettagli applicazioni utilizzando il database virus online.</string>
+    <string name="summary_antivirus_oversea">Aggiorna automaticamente database virus</string>
     <string name="button_antivirus">OK</string>
     <string name="power_center_title">Batteria</string>
     <string name="power_center_consume_rank">Utilizzo batteria</string>
@@ -107,6 +111,7 @@
     <string name="power_dialog_auto_clean_memory_title">Cancella memoria automaticamente</string>
     <string name="power_dialog_auto_clean_memory_summary">Quando il dispositivo è bloccato, cancella i processi in cache che consumano batteria</string>
     <string name="power_dialog_sleep_title">Sospensione</string>
+    <string name="power_dialog_wifi_title">Wi-Fi</string>
     <string name="power_dialog_vibration_title">Vibrazione</string>
     <string name="power_dialog_screen_brightness_title">Luminosità</string>
     <string name="power_dialog_screen_brightness_automatic">Regolazione automatica</string>
@@ -456,14 +461,6 @@
     <string name="msg_cleanup_db_update_time_unknown">Aggiornato il: sconosciuto</string>
     <string name="notification_title_of_garbage_cleanup">Avviso dimensione cestino</string>
     <string name="notification_summary_of_garbage_cleanup">Ehi attenzione! Il cestino è oltre %s.</string>
-    <string name="item_garbage_time_daily">Ogni giorno</string>
-    <string name="item_garbage_time_3d">Ogni 3 giorni</string>
-    <string name="item_garbage_time_7d">Ogni 7 giorni</string>
-    <string name="item_garbage_time_never">Mai</string>
-    <string name="item_garbage_size_100m">100M</string>
-    <string name="item_garbage_size_300m">300M</string>
-    <string name="item_garbage_size_500m">500M</string>
-    <string name="item_garbage_size_1000m">1G</string>
     <string name="item_title_garbage_time">Orario allarme</string>
     <string name="item_title_garbage_size">Dimensione allarme</string>
     <string name="white_list_cache_header">File in cache: %d</string>
@@ -671,4 +668,26 @@
     <string name="permission_with_SMS_and_MMS">Permessi SMS ed MMS</string>
     <string name="call_and_contact">Chiamate e contatti</string>
     <string name="permission_with_call_and_contact">PErmessi per chiamate, inormazioni di contatto e registro chiamate.</string>
+    <string name="pref_category_title_auto_clean_settings">Pulisci automaticamente</string>
+    <string name="pref_title_auto_clean_and_alert">Pulisci automaticamente</string>
+    <string name="pref_summary_auto_clean_and_alert">Imposta la pulizia automatica</string>
+    <string name="pref_category_title_other_clean_settings">Impostazioni aggiuntive</string>
+    <string name="pref_title_garbage_process_mode">Notifiche</string>
+    <string name="pref_summary_garbage_process_mode">Imposta notifiche quando la pulizia è in esecuzione</string>
+    <string name="pref_title_garbage_auto_clean_content">Scegli gli elementi</string>
+    <string name="pref_summary_garbage_auto_clean_content">Scegli quali elementi pulire automaticamente</string>
+    <string name="pref_content_cleanup_white_list_none">Nessuno</string>
+    <string name="auto_clean_switch_on">On</string>
+    <string name="auto_clean_switch_off">Off</string>
+    <string name="item_title_process_mode">"Scegli un'azione"</string>
+    <string name="pref_title_auto_clean_content_choose">Scegli elementi dapulire</string>
+    <string name="clean_content_zero">Non pulire niente</string>
+    <string name="clean_content_one">%s</string>
+    <string name="clean_content_two">%1$s e %2$s</string>
+    <string name="clean_content_three">Salta %s</string>
+    <string name="clean_content_all">Tutto</string>
+    <string name="notification_summary_after_auto_cleanup">Pulito %s.</string>
+    <string name="pref_category_title_lock_screen_memory_clean">Pulisci al blocco</string>
+    <string name="pref_title_lock_screen_memory_clean">Pulisci al blocco</string>
+    <string name="pref_summary_lock_screen_memory_clean">Pulisci automaticamente quando il dispositivo viene bloccato</string>
 </resources>
