--- a/Italian/main/TeleService.apk/res/values-it/strings.xml
+++ b/Italian/main/TeleService.apk/res/values-it/strings.xml
@@ -93,7 +93,7 @@
     <string name="error_updating_title">Errore impostazioni chiamate</string>
     <string name="reading_settings">Lettura impostazioni…</string>
     <string name="updating_settings">Aggiornamento impostazioni…</string>
-    <string name="reverting_settings">Anullamento impostazioni…</string>
+    <string name="reverting_settings">Annullamento impostazioni…</string>
     <string name="response_error">Risposta non prevista dalla rete.</string>
     <string name="exception_error">Errore di rete o della carta SIM.</string>
     <string name="stk_cc_ss_to_dial_error">Richiesta SS modificata in una richiesta DIAL.</string>
