--- a/Italian/main/MiuiFramework.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/MiuiFramework.apk/res/values-it-rIT/strings.xml
@@ -3,7 +3,7 @@
     <string name="status_bar_toggle_ac">Accesso</string>
     <string name="status_bar_toggle_bluetooth">BT</string>
     <string name="status_bar_toggle_brightness">Lumin.</string>
-    <string name="status_bar_toggle_auto_brightness">Lumin. Auto</string>
+    <string name="status_bar_toggle_auto_brightness">Lumin.Auto</string>
     <string name="status_bar_toggle_data">Dati</string>
     <string name="status_bar_toggle_divider">Altro</string>
     <string name="status_bar_toggle_flight_mode">Aereo</string>
@@ -13,18 +13,18 @@
     <string name="status_bar_toggle_network_type">Rete</string>
     <string name="status_bar_toggle_privacy_mode">Guard</string>
     <string name="status_bar_toggle_reboot">Riavvia</string>
-    <string name="status_bar_toggle_rotate">Rotazione</string>
+    <string name="status_bar_toggle_rotate">Rotaz.</string>
     <string name="status_bar_toggle_screen_button">Tasti</string>
     <string name="status_bar_toggle_screenshot">Screenshot</string>
     <string name="status_bar_toggle_shutdown">Spegni</string>
     <string name="status_bar_toggle_sync">Sincr.</string>
     <string name="status_bar_toggle_torch">Torcia</string>
-    <string name="status_bar_toggle_vibrate">Vibra</string>
+    <string name="status_bar_toggle_vibrate">Vibraz.</string>
     <string name="status_bar_toggle_wifi">Wi-Fi</string>
     <string name="status_bar_toggle_power_mode">Prestaz.</string>
     <string name="status_bar_toggle_drive_mode">Guida</string>
     <string name="status_bar_toggle_wifi_ap">Hospot Wi-Fi</string>
-    <string name="status_bar_toggle_quiet_mode">Anti-disturbo</string>
+    <string name="status_bar_toggle_quiet_mode">Anti-Dist.</string>
     <string name="status_bar_toggle_sync_auto">Sincr.Auto</string>
     <string name="status_bar_toggle_sync_manual">Sincr.Man.</string>
     <string name="status_bar_toggle_syncing">Sincronizza</string>
