--- a/Italian/main/MiuiFramework.apk/res/values-it-rIT/strings.xml
+++ b/Italian/main/MiuiFramework.apk/res/values-it-rIT/strings.xml
@@ -24,7 +24,7 @@
     <string name="status_bar_toggle_power_mode">Prestaz.</string>
     <string name="status_bar_toggle_drive_mode">Guida</string>
     <string name="status_bar_toggle_wifi_ap">Hospot Wi-Fi</string>
-    <string name="status_bar_toggle_quiet_mode">Anti-Dist.</string>
+    <string name="status_bar_toggle_quiet_mode">Anti-dist.</string>
     <string name="status_bar_toggle_sync_auto">Sincr.Auto</string>
     <string name="status_bar_toggle_sync_manual">Sincr.Man.</string>
     <string name="status_bar_toggle_syncing">Sincronizza</string>
